# HeadlessDev

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  setup.py  setup.sh
config/i3/: config  i3  i3-setup.sh
config/kitty/: kitty.conf
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/plugins/: lualine.lua  mason.lua
config/picom/: picom.conf
configs_cli/: main.py
docs/: arch_cheatsheet.txt  ubuntu-cheatsheet.txt  windows-cheatsheet.txt
dotfiles/: tmux.conf  zshrc
