[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configs_cli"
version = "0.2.0"
description = "CLI tool for setting up a headless development environment"
requires-python = ">=3.9"
authors = [
    {name = "Finley", email = "finley@example.com"}
]
dependencies = [
    "rich>=13.0.0",
    "setuptools>=64",
    "wheel"
]

[project.scripts]
configs-cli = "configs_cli.main:main"

